build_files/lib/error/test/lib/newcsfml/sources/newcsfml.c
/*
** EPITECH PROJECT, 2025
** sources - newcsfml.c
** File description:
** <description>
*/

#include "../includes/newcsfml.h"

void newcsfml_exist(void)
{
}
